first arangoDB IT test + create collection if not exist Create Rest Resource create specs2 free matchers

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -3,14 +3,14 @@
 # docker containers
 docker {
 
-  elasticsearch {
-    image-name = "elasticsearch:1.7.1"
+  arango {
+    image-name = "arangodb/arangodb:3.7.10"
     memory = 536870912 # 512MB
     memory-reservation = 268435456 # 256MB
     ready-checker {
       http-response-code {
-        port = 9200
-        path = "/"
+        port = 18529
+        path = "/_db/_system/_admin/aardvark/index.html"
         within = 100
         looped {
           attempts = 20
@@ -19,12 +19,22 @@ docker {
       }
     }
     port-maps {
-      default-elasticsearch-http-port {
-        internal = 9200
-      }
-      default-elasticsearch-client-port {
-        internal = 9300
+      default-arango-port {
+        internal = 8529
       }
     }
   }
+}
+
+# service config
+avokka {
+  host = "localhost"
+  port = 18529
+  username = "root"
+  password = "rootpassword"
+  database = "_system"
+  chunk-length = 30000
+  read-buffer-size = 256000
+  connect-timeout = "10s"
+  reply-timeout = "30s"
 }
