Test kit helpers for ArangoDB and Api dsls

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -7,9 +7,10 @@ docker {
     image-name = "arangodb/arangodb:3.7.10"
     memory = 536870912 # 512MB
     memory-reservation = 268435456 # 256MB
+    environmental-variables = ["ARANGO_ROOT_PASSWORD=rootpassword"]
     ready-checker {
       http-response-code {
-        port = 18529
+        port = 8529
         path = "/_db/_system/_admin/aardvark/index.html"
         within = 100
         looped {
@@ -20,6 +21,7 @@ docker {
     }
     port-maps {
       default-arango-port {
+        external = 18529
         internal = 8529
       }
     }
