basic security module with jwt implementation

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -40,3 +40,7 @@ avokka {
   connect-timeout = "10s"
   reply-timeout = "30s"
 }
+
+jwt {
+    signing-key = "zK55VIsxuDZBfTSr5rK4t9U5TY2FZUiu+dW0nCWcegw="
+}
