--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,11 @@ avokka {
   connect-timeout = "10s"
   reply-timeout = "30s"
 }
+
+
+jwt {
+
+  signing-key = "zK55VIsxuDZBfTSr5rK4t9U5TY2FZUiu+dW0nCWcegw="
+
+  signing-key = ${?SIGNATURE_KEY}
+}
