basic security module with jwt implementation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,11 @@ avokka {
   connect-timeout = "10s"
   reply-timeout = "30s"
 }
+
+
+security {
+
+  signingKey = "zK55VIsxuDZBfTSr5rK4t9U5TY2FZUiu+dW0nCWcegw="
+
+  signingKey = ${?SIGNATURE_KEY}
+}
